feat: wire real retrieval pipeline and runtime env config